@@ -20,6 +20,7 @@
         <developer name="Larry Hamel" email="httpunit@codeguild.com"/>
         <developer name="Daniel Jasmin" email="djasmin@rational.com"/>
         <developer name="David D. Kilzer" email="ddkilzer@users.sourceforge.net"/>
+        <developer name="Patrick Lightbody" email="Patrick.Lightbody@spokesoftware.com"/>
         <developer name="George Murnock" email="gmurnock@bea.com"/>
         <developer name="Mark Luty" email="mluty@pace2020.com"/>
         <developer name="Michael McCallum" email="michael@gholam.net"/>
