@@ -104,6 +104,13 @@ Inline and included scripts are supported, as are the following DOM elements:
 <h4>properties</h4>
 <ul>
 <li>title    - r/o the title attribute of the element</li>
+<li>style    - r/o the style attribute</li>
+</ul>
+
+<h2>Style</h2>
+<h4>properties</h4>
+<ul>
+<li>display    - r/w whether the element is to be displayed</li>
 </ul>
 
 <h2>Form (inherits from HTMLElement)</h2>
