@@ -579,6 +579,33 @@ public class ScriptingTest extends HttpUnitTest {
     }
 
 
+    public void testStyleProperty() throws Exception {
+        defineResource( "start.html",
+                "<html><head><script language='JavaScript'>" +
+                "function showDisplay( id ) {" +
+                "  var element = document.getElementById( id );\n" +
+                "  alert( 'element with id ' + id + ' has style.display ' + element.style.display );\n" +
+                "}\n" +
+                "function swapDisplay( id ) {" +
+                "  var element = document.getElementById( id );\n" +
+                "  element.style.display = !element.style.display;\n" +
+                "}\n" +
+                "function doAll() {\n" +
+                "  showDisplay('test');\n" +
+                "  swapDisplay('test'); \n" +
+                "  showDisplay('test');\n" +
+                "}\n" +
+                "</script>" +
+                "</head><body onLoad='doAll();'>" +
+                "<div id='test'>foo</div></body></html>" );
+        WebConversation wc = new WebConversation();
+        wc.getResponse( getHostPath() + "/start.html" );
+
+        assertEquals( "element with id test has style.display true", wc.popNextAlert() );
+        assertEquals( "element with id test has style.display false", wc.popNextAlert() );
+    }
+
+
     public void testSimpleSetCookie() throws Exception {
         defineResource(  "OnCommand.html",  "<html><head></head>\n" +
                                             "<body onLoad='document.cookie=\"color=red;path=/\"'>\n" +
